[package]
name = "beer_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
gethostname = "0.4.3"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
rumqttc = "0.24.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
simple_logger = "5.0.0"
structopt = "0.3.26"
